...
      ),
      body: Center(
        child: Column(
          mainAxisAlignment: MainAxisAlignment.spaceEvenly,
          children: [
            Text('計算結果：$calcResult', style: TextStyle(fontSize: 40),),
            Text(calcResult % 2 == 0 ? '偶数' : '奇数', style: TextStyle(fontSize: 30),),
            Row(
              mainAxisAlignment: MainAxisAlignment.spaceEvenly,
              children: [
                _numberButton(1),
                _numberButton(2),
                _numberButton(3),
...
